--- a/ElectricDashboardApi/appsettings.json
+++ b/ElectricDashboardApi/appsettings.json
@@ -10,6 +10,10 @@
   },
   "AllowedHosts": "*",
   "Keycloak": {
+    "TokenUrl": "http://192.168.1.164:8080/realms/power/protocol/openid-connect/token",
+    "UserUrl":  "http://192.168.1.164:8080/admin/realms/power/users",
+    "ClientId": "electric-dashboard-api-private",
+    "ClientSecret": "g2gTPnkozwt9CnpOchjxbDbN7f1fho5m",
     "MetadataAddress": "http://192.168.1.164:8080/realms/power/.well-known/openid-configuration",
     "ValidIssuer": "http://192.168.1.164:8080/realms/power/",
     "AuthorizationUrl": "http://192.168.1.164:8080/realms/power/protocol/openid-connect/auth",
