Add AI bill parsing.

--- a/ElectricDashboardApi.Data/ElectricDashboardApi.Data.csproj
+++ b/ElectricDashboardApi.Data/ElectricDashboardApi.Data.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ElectricDashboard.Models\ElectricDashboard.Models.csproj" />
+      <ProjectReference Include="..\ElectricDashboardApi.Models\ElectricDashboardApi.Models.csproj" />
     </ItemGroup>
 
 </Project>
