--- a/ElectricDashboardApi/ElectricDashboardApi.csproj
+++ b/ElectricDashboardApi/ElectricDashboardApi.csproj
@@ -11,7 +11,9 @@
         <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.AI" Version="10.1.1" />
         <PackageReference Include="Npgsql" Version="9.0.4" />
+        <PackageReference Include="OllamaSharp" Version="5.4.12" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.12.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
     </ItemGroup>
@@ -23,8 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ElectricDashboard.Models\ElectricDashboard.Models.csproj" />
-      <ProjectReference Include="..\ElectricDashboard.Services\ElectricDashboard.Services.csproj" />
+      <ProjectReference Include="..\ElectricDashboardApi.Models\ElectricDashboardApi.Models.csproj" />
+      <ProjectReference Include="..\ElectricDashboardApi.Services\ElectricDashboardApi.Services.csproj" />
       <ProjectReference Include="..\ElectricDashboardApi.Data\ElectricDashboardApi.Data.csproj" />
     </ItemGroup>
 
