Add ability to convert and parse PDF files.

--- a/ElectricDashboardApi.Services/ElectricDashboardApi.Services.csproj
+++ b/ElectricDashboardApi.Services/ElectricDashboardApi.Services.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.Extensions.AI" Version="10.1.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.11" />
       <PackageReference Include="OllamaSharp" Version="5.4.12" />
+      <PackageReference Include="PDFtoImage" Version="5.2.0" />
     </ItemGroup>
 
 </Project>
