Pass address guid when submitting a bill.
Add method to retrieve electric bills.

Add method to store electric bill

Add query to check if an address exists and if it is associated with the given user id.

--- a/ElectricDashboardApi.Data/ElectricDashboardApi.Data.csproj
+++ b/ElectricDashboardApi.Data/ElectricDashboardApi.Data.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ElectricDashboardApi.Dtos\ElectricDashboardApi.Dtos.csproj" />
       <ProjectReference Include="..\ElectricDashboardApi.Models\ElectricDashboardApi.Models.csproj" />
     </ItemGroup>
 
