Fix saving electric bills.  Change model handling.

--- a/ElectricDashboardApi.Dtos/ElectricDashboardApi.Dtos.csproj
+++ b/ElectricDashboardApi.Dtos/ElectricDashboardApi.Dtos.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ElectricDashboardApi.Models\ElectricDashboardApi.Models.csproj" />
+    </ItemGroup>
+
 </Project>
