--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-﻿**/.dockerignore
+**/.dockerignore
 **/.env
 **/.git
 **/.gitignore
@@ -15,6 +15,8 @@
 **/bin
 **/charts
 **/docker-compose*
+!**/ElectricDashboard.Api/Dockerfile
+!**/ElectricDashboard.Api/nginx.conf
 **/Dockerfile*
 **/node_modules
 **/npm-debug.log
