--- a/ElectricDashboard.Api/nginx.conf
+++ b/ElectricDashboard.Api/nginx.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://localhost:5281;
+        proxy_pass http://127.0.0.1:5281;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
