--- a/ElectricDashboard.Api/Dockerfile
+++ b/ElectricDashboard.Api/Dockerfile
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS api-base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 5281
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS api-build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["ElectricDashboard.Api/ElectricDashboard.Api.csproj", "ElectricDashboard.Api/"]
@@ -12,9 +12,13 @@ COPY . .
 WORKDIR "/src/ElectricDashboard.Api"
 RUN dotnet build "./ElectricDashboard.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-FROM build AS publish
+FROM api-build AS api-publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./ElectricDashboard.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM api-base AS api-final
+COPY --from=api-publish /app/publish /app
+ENTRYPOINT ["dotnet", "ElectricDashboard.Api.dll"]
 
 FROM node:22-alpine AS frontend-build
 WORKDIR /app
@@ -23,9 +27,8 @@ RUN npm ci
 COPY . .
 RUN npm run build -- --configuration production
 
-FROM nginx:alpine AS final
-COPY --from=publish /app/publish /app/api
-COPY --from=frontend-build /dist/ElectricDashboard/browser/* /usr/share/nginx/html
+FROM nginx:alpine AS frontend-final
+COPY --from=frontend-build /app/dist/ElectricDashboard/browser/ /usr/share/nginx/html
 COPY ElectricDashboard.Api/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 4200
 CMD ["nginx", "-g", "daemon off;"]
