Add NPM install step

--- a/ElectricDashboard.Api/Dockerfile
+++ b/ElectricDashboard.Api/Dockerfile
@@ -23,7 +23,7 @@ ENTRYPOINT ["dotnet", "ElectricDashboard.Api.dll"]
 FROM node:22-alpine AS frontend-build
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 COPY . .
 RUN npm run build -- --configuration production
 
