Set base href path

--- a/ElectricDashboard.Api/Dockerfile
+++ b/ElectricDashboard.Api/Dockerfile
@@ -25,7 +25,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build -- --configuration production
+RUN npm run build -- --base-href /electric/ --configuration production
 
 FROM nginx:alpine AS frontend-final
 COPY --from=frontend-build /app/dist/ElectricDashboard/browser/ /usr/share/nginx/html
